feat(android): add v1.3 workout and update tools